bau: Use single instance of ObjectMapper
ObjectMapper is an expensive object that can affect performance if there are
multiple instance of it and we should endeavor to use a single
instance of it in the application.